Setting the toasts container to position fixed as I noticed on mobile, if scrolled down, the toasts are above the window.

--- a/public/css/project-vitruvius.css
+++ b/public/css/project-vitruvius.css
@@ -7355,7 +7355,7 @@ input[type="text"] {
 ************************************************************************************/
 
 #vp-toast-container {
-  position: absolute;
+  position: fixed;
   top: 80px;
   right: 16px;
   z-index: 10000;
