--- a/tailwinds/tailwinds.css
+++ b/tailwinds/tailwinds.css
@@ -389,7 +389,7 @@ input[type="text"] {
 ************************************************************************************/
 
 #vp-toast-container {
-  position: absolute;
+  position: fixed;
   top: 80px;
   right: 16px;
   z-index: 10000;
